# beans-ai

./: .gitignore  LICENSE  README.md  prompt_example.txt  prompt_template.txt
beans001/: pyproject.toml
beans001/src/: api.py  generate_dataset.py  grpo.py  grpo_cracked.py  grpo_graph.ipynb  sft_dataset.py  tokenizer.ipynb
beans001/src/utils/: chess_queries.py  generate_positions.py  reward_function.py
eval/: configs.ts  index.ts  package.json  pnpm-lock.yaml
eval/lib/: eval.ts  utils.ts
web/: package.json  pnpm-lock.yaml
web/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
web/src/app/api/chat/: route.ts
web/src/components/: chat-box.tsx  model-selector.tsx
web/src/hooks/: use-beans.ts
web/src/lib/: utils.ts
