[project]
name = "beans001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "chess>=1.11.2",
    "deepspeed>=0.16.7",
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "tensorboardx>=2.6.2.2",
    "tqdm>=4.67.1",
    "unsloth>=2025.5.2",
    "uvicorn>=0.34.2",
    "vllm==0.7.3",
]
